@@ -1,5 +1,12 @@
+2019-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/gradient.c (GradientImage): OpenMP portability requires
+	that loop variable be signed.
+
 2019-12-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>
-	* magick/gradient.c: Visual studio does not compile file without this fix.        
+	
+	* magick/gradient.c: Visual studio does not compile file without
+	this fix.
 
 2019-12-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
